# d2

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: docs.yml  release.yml
d2/: connection.py  db.py  model.py  query.py  schema.py
docs/: advanced-queries.md  configuration.md  connection.md  getting-started.md  index.md  migrations-internals.md  migrations.md  querying.md  schema.md  typed-query-builder-spec.md  typed-query-builder.md  writes.md
issues/: 01-tracer-select-roundtrip.md  02-predicates-aliasing-ordering.md  03-async-execution-variants.md  04-insert-single-and-bulk.md  05-update-and-delete.md  06-joins-and-table-aliasing.md  07-aggregations-group-by-having.md  08-subqueries-as-view-as-scalar.md  09-ctes-named-and-recursive.md  10-set-operations.md  11-window-functions.md  12-upsert-on-conflict.md  13-prefetch-via-json-aggregation.md  14-schema-metadata-and-ddl.md  140-tracer-create-table-migration.md  141-snapshot-diff-codegen-cli-for-tables.md  142-column-ops-add-drop-rename-and-granular-modify.md  143-constraints-and-indexes-concurrent-defaults.md  144-foreign-keys.md  145-views-query-kwarg-and-diff.md  146-extensions-and-schemas.md  147-reverse-operations-and-rollback.md  148-escape-hatches-run-sql-and-run-python.md  15-patch-dict-update-helper.md
norm/: __init__.py  connection.py  db.py  dialect.py  driver.py  filter.py  model.py  query.py  schema.py
tests/: test_integration.py  test_unit.py
website/: astro.config.mjs  package-lock.json  package.json
(+93 files in other folders)
