[project]
name = "norm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "msgspec>=0.21.1",
    "pypika>=0.51.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["."]
markers = [
    "integration: tests that require a running PostgreSQL instance",
]
addopts = [
    "--import-mode=importlib",
    "--doctest-modules",
    "--doctest-glob=docs/*.md",
    "--quiet",
    "--tb=long",
]